<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1F38"
    android:gravity="bottom"
    android:orientation="vertical"

    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:gravity="bottom"
        android:orientation="vertical">


        <EditText
            android:id="@+id/input_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="#1A1F38"
            android:inputType="number"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="30sp">

        </EditText>


        <EditText
            android:id="@+id/result_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#1A1F38"
            android:inputType="number"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="50sp"

            android:textStyle="bold">

        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_bg_design"

        android:orientation="vertical"

        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clear_btn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="fill"
                    android:background="@drawable/button_design_bg"
                    android:text="@string/clear"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_percentage"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="fill"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design_bg"
                    android:text="@string/perectange"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_divide"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="fill"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design_bg"
                    android:text="@string/divide"
                    android:textColor="@color/white"
                    android:textSize="30sp"

                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="4">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_7"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="25sp"

                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_multiply"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="4">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_subtract"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="4">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_design_bg"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_0"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:background="@drawable/button_design_bg"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_point"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="fill"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design_bg"
                    android:text="@string/point"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_equal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/equal_btn_design"
                    android:text="@string/equal"
                    android:textColor="@color/white"

                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>




